@@ -78,7 +78,13 @@ fix_not_all_unique <- function(x, ...) {
 #' @param distfun_col distfun for row dendrogram only.
 #' @param hclustfun_col hclustfun for col dendrogram only.
 #'
-#' @param dendrogram character string indicating whether to draw 'none', 'row', 'column' or 'both' dendrograms. Defaults to 'both'. However, if Rowv (or Colv) is FALSE or NULL and dendrogram is 'both', then a warning is issued and Rowv (or Colv) arguments are honoured.
+#' @param dendrogram character string indicating whether to compute 'none',
+#' 'row', 'column' or 'both' dendrograms. Defaults to 'both'. However, if Rowv 
+#' (or Colv) is FALSE or NULL and dendrogram is 'both', then a warning is issued
+#' and Rowv (or Colv) arguments are honoured.
+#' @param show_dendrogram Logical vector of length controlling whether the row 
+#' and column dendrograms are displayed. If a logical scalar is 
+#' provided, it is repeated to become a logical vector of length two.
 #' @param reorderfun function(d, w) of dendrogram and weights for reordering the row and column dendrograms. The default uses stats{reorder.dendrogram}
 #'
 #' @param k_row an integer scalar with the desired number of groups by which to color the dendrogram's branches in the rows (uses \link[dendextend]{color_branches})
@@ -153,6 +159,7 @@ heatmapr <- function(x,
                      hclustfun_col,
 
                      dendrogram = c("both", "row", "column", "none"),
+                     show_dendrogram = c(TRUE, TRUE),
                      reorderfun = function(d, w) reorder(d, w),
 
                      k_row = 1,
@@ -209,6 +216,12 @@ heatmapr <- function(x,
     }
   }
 
+  if (!(is.logical(show_dendrogram) & length(show_dendrogram) %in% c(1, 2))) {
+    stop("show_dendrogram must be a logical vector of length 1 or 2")
+  }
+  if (length(show_dendrogram) == 1) {
+    show_dendrogram <- rep(show_dendrogram, 2)
+  }
 
   if (missing(distfun_row)) distfun_row <- distfun
   if (missing(hclustfun_row)) hclustfun_row <- hclustfun
@@ -459,8 +472,8 @@ heatmapr <- function(x,
     }
   }
 
-  rowDend <- if (is.dendrogram(Rowv)) Rowv else NULL
-  colDend <- if (is.dendrogram(Colv)) Colv else NULL
+  rowDend <- if (is.dendrogram(Rowv) & show_dendrogram[[1]]) Rowv else NULL
+  colDend <- if (is.dendrogram(Colv) & show_dendrogram[[2]]) Colv else NULL
 
 
   ## cellnote
